[project]
name = "hackaton-projects"
version = "0.1.0"
description = ""
authors = [
    {name = "Germán Küber",email = "german.kuber@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "selenium (>=4.32.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "supabase (>=2.15.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "termcolor (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
